# demo_test

./: CMakeLists.txt  package.xml  tags
launch/: all_land.launch  all_land.launch~  all_takeoff.launch  all_takeoff.launch~  demo_test.launch  mavro_send_2.launch  mavro_send_2.launch~  mocap_send.launch  mocap_send.launch~  mocap_send_F450.launch
msg/: attitude_feedback.msg  body_attitude.msg  demo_code.msg  ekf_leader.msg  ekf_status.msg  formation_data.msg  formation_shape.msg  formation_shape_pub.msg  pos_data.msg  pos_status.msg  pos_write_data.msg  pos_write_data2.msg  pos_write_team.msg  position_setpoint.msg  quadrotor_collect.msg
scripts/: demo_test_py.py  demo_test_py2.py  demo_test_py3.py  keyboard_server.py  mocap_send.py  mocap_send_1.py  offboard_test.py  run_with_turtle.py  run_with_turtle.py~  teleop_keyboard_control.py  teleop_keyboard_control_1.py  teleop_keyboard_control_2.py  teleop_keyboard_control_3.py  teleop_keyboard_control_4.py  teleop_server.py  test_quads_real.py  test_quads_real2.py  test_quads_real3.py  test_quads_real4.py  test_quads_real5.py  test_quads_real6.py  test_server.py
scripts/exlcm/: example_t.py
scripts/lcm/: example_t.lcm
scripts/lcm/drake/: example_t.java
scripts/lcm/exlcm/: example_t.java
src/: Server.cpp  bazi.txt  bazi1.txt  bazi2.txt  bazi3.txt  data_record.cpp  demo_collect.cpp  demo_ekf_esitimator1.cpp  demo_fandl.cpp  demo_fandl2.cpp  demo_gcs3.cpp  demo_gcs4.cpp  demo_gcs5.cpp  demo_gcs_API.cpp  demo_nwforma_test1.cpp  demo_nwforma_test2.cpp  demo_pos_write.cpp  demo_pos_write2.cpp  demo_pos_write_loop.cpp  demo_pos_write_multi.cpp  demo_read_data.cpp  demo_read_data2.cpp  demo_read_data3.cpp  demo_read_data4.cpp  demo_read_data_traj_e.cpp  demo_read_data_traj_e2.cpp  demo_rr.cpp  demo_send_thrd.cpp  demo_team_pos_write.cpp  demo_traj_write.cpp  demo_traj_yuan.cpp  demo_yuan_xy.cpp  ekf_test1.cpp  ekf_test2.cpp  keyboard_test.cpp  mavros_att_test.cpp  mavros_att_test.cpp.html  mavros_att_test.cpp~  mavros_att_test_without_dynamic.cpp  mavros_att_test_without_dynamic.cpp~  (+15 more)
srv/: teleop_ctrl.srv  teleop_ctrl.srv~
